--- a/src/main/resources/templates/veiculocadastro.html
+++ b/src/main/resources/templates/veiculocadastro.html
@@ -30,7 +30,7 @@
             </div>
             <div id="inferior">
                 <br>
-                <form name = "form1" class="form1"method="get" action="/veiculoinsert">
+                <form name = "form1" class="form1"method="post" action="veiculoinsert/">
                     <table>
                         <tr>
                             <td class="normal">Cliente: </td>
