--- a/src/main/resources/templates/clientefisicoupdate.html
+++ b/src/main/resources/templates/clientefisicoupdate.html
@@ -3,8 +3,8 @@
         <title>Oficina G</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="projetao.css">
-        <script src="projetao.js" type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href="/projetao.css">
+        <script src="/projetao.js" type="text/javascript"></script>
     </head>
 
     <body>
