--- a/src/main/resources/templates/servicocadastro.html
+++ b/src/main/resources/templates/servicocadastro.html
@@ -68,7 +68,7 @@
                         
                         
                         <tr>
-                            <td class="normal">Valor</td>
+                            <td class="normal">Valor da M&atilde;o de Obra: </td>
                             <td class="normal">
                                 <input type="text" size="10" id="valor" name="valor">
                             </td>
