--- a/src/main/resources/templates/servicoupdate.html
+++ b/src/main/resources/templates/servicoupdate.html
@@ -3,7 +3,8 @@
         <title>Oficina G</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="projetao.css" type="text/css" rel="stylesheet">
+        <link href="/projetao.css" type="text/css" rel="stylesheet">
+        <script src="/projetao.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -68,7 +69,7 @@
 
 
                         <tr>
-                            <td class="normal">Valor</td>
+                            <td class="normal">Valor da M&atilde;o de Obra: </td>
                             <td class="normal">
                                 <input type="text" size="10" id="valor" name="valor" value="{{valor}}">
                             </td>
