Ajax funcionando para 1 funcionario, refazer o filtro

--- a/src/main/resources/templates/veiculo.html
+++ b/src/main/resources/templates/veiculo.html
@@ -1,67 +1,68 @@
 <html>
-<head>
-<title>Oficina G</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="projetao.css" type="text/css" rel="stylesheet">
-</head>
+    <head>
+        <title>Oficina G</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="projetao.css" type="text/css" rel="stylesheet">
+    </head>
 
-<body>
+    <body>
 
-<div id='div1' name='div1'>
-<h1 id='oficina'>Oficina Gambiarra</h1>
-<center>
-<div class="rotas">
-<a id='links' href="/">In&iacute;cio </a>
-<a id='links' href="/veiculo">Ve&iacute;culos </a>
-<a id='links' href="/funcionario">Funcion&aacute;rios </a>
-<a id='links' href="/cliente">Clientes </a>
-<a id='links' href="/pecas">Pe&ccedil;as </a>
-<a id='links' href="/servico">Servi&ccedil;os </a>
-<a id='links' href="/historico">Hist&oacute;rico</a>
-</div>
-</center>
-</div>
-<center>
-<div>
-<br>
-<td><a href="/veiculocadastro" class="linkn">Cadastrar Ve&iacute;culo</a></td>
-</div>
+        <div id='div1' name='div1'>
+            <h1 id='oficina'>Oficina Gambiarra</h1>
+            <center>
+                <div class="rotas">
+                    <a id='links' href="/">In&iacute;cio </a>
+                    <a id='links' href="/veiculo">Ve&iacute;culos </a>
+                    <a id='links' href="/funcionario">Funcion&aacute;rios </a>
+                    <a id='links' href="/cliente">Clientes </a>
+                    <a id='links' href="/pecas">Pe&ccedil;as </a>
+                    <a id='links' href="/servico">Servi&ccedil;os </a>
+                    <a id='links' href="/historico">Hist&oacute;rico</a>
+                </div>
+            </center>
+        </div>
+    <center>
+        <div>
+            <br>
+            <td><a href="/veiculocadastro" class="linkn">Cadastrar Ve&iacute;culo</a></td>
+        </div>
 
-<div id='div2' name='div2'>
-<h2>Ve&iacute;culos</h2>
-<table>
-<tr>
+        <div id='div2' name='div2'>
+            <h2>Ve&iacute;culos</h2>
+            <table>
+                <tr>
 
-<th>Cliente</th>
-<th>Placa</th>
-<th>Chassi</th>
-<th>Modelo</th>
-<th>Marca</th>
-<th>Ano</th>
-<th colspan='2'>A&ccedil;&atilde;o</th>
-</tr>
-{{#veiculos}}
-<tr>
-<td>{{nome}}</td>
-<td>{{placa}}</td>
-<td>{{chassi}}</td>
-<td>{{modelo}}</td>
-<td>{{marca}}</td>
-<td>{{ano}}</td>
-<td><a href="/veiculoedit" class="views">Editar</a></td>
-<td><a href="/veiculodelete" class="views">Remover</a></td>
-</tr>
-{{/veiculos}}
-</table>
-</div>
-</center>
-<div id='div3' name='div3'>
-<center>
-<h3>Oficina G</h3>
-<p>A Oficina da Gambiarra, onde nada se perde, nada se recusa, tudo se resolve.</p>
-</center>
-</div>
+                    <th>Cliente</th>
+                    <th>Placa</th>
+                    <th>Chassi</th>
+                    <th>Modelo</th>
+                    <th>Marca</th>
+                    <th>Ano</th>
+                    <th colspan='2'>A&ccedil;&atilde;o</th>
+                </tr>
+                {{#veiculos}}
+                <tr>
+                    <td>{{cliente.getNome}}</td>
+
+                    <td>{{placa}}</td>
+                    <td>{{chassi}}</td>
+                    <td>{{modelo}}</td>
+                    <td>{{marca}}</td>
+                    <td>{{ano}}</td>
+                    <td><a href="/veiculoedit" class="views">Editar</a></td>
+                    <td><a href="/veiculodelete" class="views">Remover</a></td>
+                </tr>
+                {{/veiculos}}
+            </table>
+        </div>
+    </center>
+    <div id='div3' name='div3'>
+        <center>
+            <h3>Oficina G</h3>
+            <p>A Oficina da Gambiarra, onde nada se perde, nada se recusa, tudo se resolve.</p>
+        </center>
+    </div>
 
 
 </body>
