filtro refeito, ajax1 funcionando arrumado o html de todas as paginas

--- a/src/main/resources/templates/cliente.html
+++ b/src/main/resources/templates/cliente.html
@@ -28,12 +28,14 @@
         <div id='div2' name='div2'>
             <br>
             <table>
+                <tbody>
                 <tr>
                     <td><a href="/clientefisicocadastro" class="linkn"> Cadastrar Cliente F&iacute;sico </a></td>
                     <td><a href="/clientejuridicocadastro" class="linkn"> Cadastrar Cliente Jur&iacute;dico </a></td>
                     <td><a href="/clientefisico" class="linkn"> Listar Cliente F&iacute;sico </a></td>
                     <td><a href="/clientejuridico" class="linkn" onclick="juridico()"> Listar Cliente Jur&iacute;dico </a></td><br>
                 </tr>
+                </tbody>
             </table>
             
         </div>
