--- a/src/main/resources/templates/clientefisicocadastro.html
+++ b/src/main/resources/templates/clientefisicocadastro.html
@@ -33,6 +33,7 @@
                 <br>
                 <form name = "form1" class="form1" action="/clienteinsert/f" method="post">
                     <table>
+                        <tbody>
                         <tr>
                             <td class="normal">Nome: </td>
                             <td class="normal">
@@ -99,6 +100,7 @@
                                 <textarea cols="45" rows="4" id="complemento" name="complemento"></textarea>
                             </td>
                         </tr>
+                        </tbody>
                     </table>
                     <br>
                     <input id="criar" type="submit" value="Cadastrar">
