--- a/src/main/resources/templates/clientejuridicocadastro.html
+++ b/src/main/resources/templates/clientejuridicocadastro.html
@@ -32,72 +32,74 @@
                 <br>
                 <form name = "form1" class="form1" action="/clienteinsert/j" method="post">
                     <table>
-                        <tr>
-                            <td class="normal">Nome: </td>
-                            <td class="normal">
-                                <input type="text" size="35" id="nome" name="nome">
-                            </td>
-                        </tr>
+                        <tbody>
+                            <tr>
+                                <td class="normal">Nome: </td>
+                                <td class="normal">
+                                    <input type="text" size="35" id="nome" name="nome">
+                                </td>
+                            </tr>
 
-                        <tr>
-                            <td class="normal">Telefone: </td>
-                            <td class="normal">
-                                <input type="text" size="35" id="telefone" name="telefone" maxlength="11">
-                            </td>
-                        </tr>
+                            <tr>
+                                <td class="normal">Telefone: </td>
+                                <td class="normal">
+                                    <input type="text" size="35" id="telefone" name="telefone" maxlength="11">
+                                </td>
+                            </tr>
 
-                        <tr>
-                            <td class="normal">Email: </td>
-                            <td class="normal">
-                                <input type="text" size="35" id="email" name="email">
-                            </td>
-                        </tr>
+                            <tr>
+                                <td class="normal">Email: </td>
+                                <td class="normal">
+                                    <input type="text" size="35" id="email" name="email">
+                                </td>
+                            </tr>
 
-                        <tr>
-                            <td class="normal">CNPJ: </td>
-                            <td class="normal">
-                                <input type="text" size="35" id="cnpj" name="cnpj" maxlength="11">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="normal">Estado: </td>
-                            <td class="normal">
-                                <input type="text" size="35" id="estado" name="estado">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="normal">Cidade: </td>
-                            <td class="normal">
-                                <input type="text" size="35" id="cidade" name="cidade">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="normal">Bairro: </td>
-                            <td class="normal">
-                                <input type="text" size="35" id="bairro" name="bairro">
-                            </td>
-                        </tr>
+                            <tr>
+                                <td class="normal">CNPJ: </td>
+                                <td class="normal">
+                                    <input type="text" size="35" id="cnpj" name="cnpj" maxlength="11">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="normal">Estado: </td>
+                                <td class="normal">
+                                    <input type="text" size="35" id="estado" name="estado">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="normal">Cidade: </td>
+                                <td class="normal">
+                                    <input type="text" size="35" id="cidade" name="cidade">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="normal">Bairro: </td>
+                                <td class="normal">
+                                    <input type="text" size="35" id="bairro" name="bairro">
+                                </td>
+                            </tr>
 
-                        <tr>
-                            <td class="normal">Rua: </td>
-                            <td class="normal">
-                                <input type="text" size="35" id="rua" name="rua">
-                            </td>
-                        </tr>
+                            <tr>
+                                <td class="normal">Rua: </td>
+                                <td class="normal">
+                                    <input type="text" size="35" id="rua" name="rua">
+                                </td>
+                            </tr>
 
-                        <tr>
-                            <td class="normal">N&uacute;mero: </td>
-                            <td class="normal">
-                                <input type="text" size="10" id="numero" name="numero">
-                            </td>
-                        </tr>
+                            <tr>
+                                <td class="normal">N&uacute;mero: </td>
+                                <td class="normal">
+                                    <input type="text" size="10" id="numero" name="numero">
+                                </td>
+                            </tr>
 
-                        <tr>
-                            <td class="normal">Complemento: </td>
-                            <td class="normal">
-                                <textarea cols="45" rows="4" id="complemento" name="complemento"></textarea>
-                            </td>
-                        </tr>
+                            <tr>
+                                <td class="normal">Complemento: </td>
+                                <td class="normal">
+                                    <textarea cols="45" rows="4" id="complemento" name="complemento"></textarea>
+                                </td>
+                            </tr>
+                        </tbody>
                     </table>
                     <br>
                     <input id="criar" type="submit" value="Cadastrar">
