--- a/src/main/resources/templates/pecaupdate.html
+++ b/src/main/resources/templates/pecaupdate.html
@@ -33,6 +33,7 @@
                 <br>
                 <form name = "form1" class="form1"method="get" action="/pecaedit">
                     <table>
+                        <tbody>
                         <tr>
                             <td class="normal">Nome: </td>
                             <td class="normal">
@@ -52,6 +53,7 @@
                                 <input type="text" size="15" id="valor" name="valor" value="{{valor}}">
                             </td>
                         </tr>
+                        </tbody>
                     </table>
                     <br>
                     <input type="hidden" value="{{id}}">
