--- a/src/main/resources/templates/servicocadastro.html
+++ b/src/main/resources/templates/servicocadastro.html
@@ -32,7 +32,7 @@
                 <br>
                 <form name = "form1" class="form1"method="get" action="cadastrar.php">
                     <table>
-
+                        <tbody>
                         <tr>
                             <td class="normal">Funcion&aacute;rio: </td>
                             <td class="normal">
@@ -150,7 +150,7 @@
                                     <input type="text" size="10" id="unidade" name="unidade">
                                 </td>
                             </tr>
-                        </div>
+                        </tbody>
                     </table>
 
                     <br><br>
