--- a/src/main/resources/templates/servicoupdate.html
+++ b/src/main/resources/templates/servicoupdate.html
@@ -33,7 +33,7 @@
                 <br>
                 <form name = "form1" class="form1"method="get" action="/servicoedit">
                     <table>
-
+                        <tbody>
                         <tr>
                             <td class="normal">Funcion&aacute;rio: </td>
                             <td class="normal">
@@ -229,6 +229,7 @@
                             <td>{{quantidade}}</td>
                         </tr>
                         {{/servico_pecas}}
+                    </tbody>
                     </table>
                     <input type="hidden" id="id" name="id"value="{{id}}">
                     <br><br>
