--- a/src/main/resources/templates/veiculocadastro.html
+++ b/src/main/resources/templates/veiculocadastro.html
@@ -32,6 +32,7 @@
                 <br>
                 <form name = "form1" class="form1"method="post" action="/veiculoinsert/">
                     <table>
+                        <tbody>
                         <tr>
                             <td class="normal">Cliente: </td>
                             <td class="normal">
@@ -80,6 +81,7 @@
                                 <input type="text" size="35" id="ano" name="ano" maxlength="4">
                             </td>
                         </tr>
+                        </tbody>
                     </table>
                     <br>
                     <input id="criar" type="submit" value="Cadastrar">
