--- a/src/main/resources/templates/veiculoupdate.html
+++ b/src/main/resources/templates/veiculoupdate.html
@@ -33,6 +33,7 @@
                 <br>
                 <form name = "form1" class="form1"method="get" action="/veiculoinsert">
                     <table>
+                        <tbody>
                         <tr>
                             <td class="normal">Cliente: </td>
                             <td class="normal">
@@ -81,6 +82,7 @@
                                 <input type="text" size="35" id="ano" name="ano" value="{{ano}}"><!--tamanho 4-->
                             </td>
                         </tr>
+                        </tbody>
                     </table>
                     <br>
                     <input type="hidden" value="{{id}}">
