--- a/src/main/resources/templates/funcionariocadastro.html
+++ b/src/main/resources/templates/funcionariocadastro.html
@@ -32,6 +32,7 @@
                 <br>
                 <form name = "form1" class="form1" action="/funcionarioinsert/" method="post">
                     <table>
+                        <tbody>
                         <tr>
                             <td class="normal">Nome: </td>
                             <td class="normal">
@@ -98,6 +99,7 @@
                                 <textarea cols="45" rows="4" id="complemento" name="complemento"></textarea>
                             </td>
                         </tr>
+                        </tbody>
                     </table>
                     <br>
                     <input id="criar" type="submit" value="Cadastrar">
