--- a/src/main/resources/templates/peca.html
+++ b/src/main/resources/templates/peca.html
@@ -1,60 +1,62 @@
 <html>
-<head>
-<title>Oficina G</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="projetao.css" type="text/css" rel="stylesheet">
-</head>
+    <head>
+        <title>Oficina G</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="projetao.css" type="text/css" rel="stylesheet">
+    </head>
 
-<body>
+    <body>
 
-<div id='div1' name='div1'>
-<h1 id='oficina'>Oficina Gambiarra</h1>
-<center>
-<div class="rotas">
-<a id='links' href="/">In&iacute;cio </a>
-<a id='links' href="/veiculo">Ve&iacute;culos </a>
-<a id='links' href="/funcionario">Funcion&aacute;rios </a>
-<a id='links' href="/cliente">Clientes </a>
-<a id='links' href="/peca">Pe&ccedil;as </a>
-<a id='links' href="/servico">Servi&ccedil;os </a>
-<a id='links' href="/historico">Hist&oacute;rico</a>
-</div>
-</center>
-</div>
-<center>
-<div>
-<br>
-<td><a href="/pecacadastro" class="linkn">Cadastrar Pe&ccedil;a</a></td>
-</div>
+        <div id='div1' name='div1'>
+            <h1 id='oficina'>Oficina Gambiarra</h1>
+            <center>
+                <div class="rotas">
+                    <a id='links' href="/">In&iacute;cio </a>
+                    <a id='links' href="/veiculo">Ve&iacute;culos </a>
+                    <a id='links' href="/funcionario">Funcion&aacute;rios </a>
+                    <a id='links' href="/cliente">Clientes </a>
+                    <a id='links' href="/peca">Pe&ccedil;as </a>
+                    <a id='links' href="/servico">Servi&ccedil;os </a>
+                    <a id='links' href="/historico">Hist&oacute;rico</a>
+                </div>
+            </center>
+        </div>
+    <center>
+        <div>
+            <br>
+            <td><a href="/pecacadastro" class="linkn">Cadastrar Pe&ccedil;a</a></td>
+        </div>
 
-<div id='div2' name='div2'>
-<h2>Pe&ccedil;a</h2>
-<table>
-<tr>
-<th>Nome</th>
-<th>Fabricante</th>
-<th>Valor</th>
-<th colspan='2'>A&ccedil;&atilde;o</th>
-</tr>
-<tr>
-{{#pecas}}
-<td>{{nome}}</td>
-<td>{{fornecedor}}</td>
-<td>{{valor}}</td>
-<td><a href="/pecaedit" class="views">Editar</a></td>
-<td><a href="/pecadelete" class="views">Remover</a></td>
-</tr>
-{{/pecas}}
-</table>
-</div>
-</center>
-<div id='div3' name='div3'>
-<center>
-<h3>Oficina G</h3>
-<p>A Oficina da Gambiarra, onde nada se perde, nada se recusa, tudo se resolve.</p>
-</center>
-</div>
+        <div id='div2' name='div2'>
+            <h2>Pe&ccedil;a</h2>
+            <table>
+                <thead>
+                    <th>Nome</th>
+                    <th>Fabricante</th>
+                    <th>Valor</th>
+                    <th colspan='2'>A&ccedil;&atilde;o</th>
+                </thead>
+                <tbody>
+                <tr>
+                    {{#pecas}}
+                    <td>{{nome}}</td>
+                    <td>{{fornecedor}}</td>
+                    <td>{{valor}}</td>
+                    <td><a href="/pecaedit" class="views">Editar</a></td>
+                    <td><a href="/pecadelete" class="views">Remover</a></td>
+                </tr>
+                {{/pecas}}
+                </tbody>
+            </table>
+        </div>
+    </center>
+    <div id='div3' name='div3'>
+        <center>
+            <h3>Oficina G</h3>
+            <p>A Oficina da Gambiarra, onde nada se perde, nada se recusa, tudo se resolve.</p>
+        </center>
+    </div>
 
 
 </body>
