--- a/src/main/resources/templates/pecacadastro.html
+++ b/src/main/resources/templates/pecacadastro.html
@@ -1,70 +1,72 @@
 <html>
-<head>
-<title>Oficina G</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="projetao.css" type="text/css" rel="stylesheet">
-</head>
+    <head>
+        <title>Oficina G</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="projetao.css" type="text/css" rel="stylesheet">
+    </head>
 
-<body>
+    <body>
 
-<div id='div1' name='div1'>
-<h1 id='oficina'>Oficina Gambiarra</h1>
-<center>
-<div class="rotas">
-<a id='links' href="/">In&iacute;cio </a>
-<a id='links' href="/veiculo">Ve&iacute;culos </a>
-<a id='links' href="/funcionario">Funcion&aacute;rios </a>
-<a id='links' href="/cliente">Clientes </a>
-<a id='links' href="/peca">Pe&ccedil;as </a>
-<a id='links' href="/servico">Servi&ccedil;os </a>
-<a id='links' href="/historico">Hist&oacute;rico</a>
-</div>
-</center>
-</div>
-<center>
-<br>
-<div id='div2' class="form">
-<div id="topo">
-<h2>Cadastro de Pe&ccedil;as</h2>
-</div>
-<div>
-<br>
-<form name = "form1" class="form1"method="get" action="/pecainsert">
-<table>
-<tr>
-<td class="normal">Nome: </td>
-<td class="normal">
-<input type="text" size="35" id="nome" name="nome">
-</td>
-</tr>
-<tr>
-<td class="normal">Fornecedor: </td>
-<td class="normal">
-    <input type="text" id="fornecedor" name="fornecedor">
-</td>
-</tr>
+        <div id='div1' name='div1'>
+            <h1 id='oficina'>Oficina Gambiarra</h1>
+            <center>
+                <div class="rotas">
+                    <a id='links' href="/">In&iacute;cio </a>
+                    <a id='links' href="/veiculo">Ve&iacute;culos </a>
+                    <a id='links' href="/funcionario">Funcion&aacute;rios </a>
+                    <a id='links' href="/cliente">Clientes </a>
+                    <a id='links' href="/peca">Pe&ccedil;as </a>
+                    <a id='links' href="/servico">Servi&ccedil;os </a>
+                    <a id='links' href="/historico">Hist&oacute;rico</a>
+                </div>
+            </center>
+        </div>
+    <center>
+        <br>
+        <div id='div2' class="form">
+            <div id="topo">
+                <h2>Cadastro de Pe&ccedil;as</h2>
+            </div>
+            <div>
+                <br>
+                <form name = "form1" class="form1"method="get" action="/pecainsert">
+                    <table
+                        <tbody>
+                            <tr>
+                                <td class="normal">Nome: </td>
+                                <td class="normal">
+                                    <input type="text" size="35" id="nome" name="nome">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="normal">Fornecedor: </td>
+                                <td class="normal">
+                                    <input type="text" id="fornecedor" name="fornecedor">
+                                </td>
+                            </tr>
 
-<tr>
-<td class="normal">Valor: </td>
-<td class="normal">
-<input type="text" size="15" id="valor" name="valor">
-</td>
-</tr>
-</table>
-<br>
-<input id="criar" type="submit" value="Cadastrar">
-</div>
-</div>
-</form>
-</center>
-<div id='div3' name='div3'>
-<center>
-<h3>Oficina G</h3>
-<p>A Oficina da Gambiarra, onde nada se perde, nada se recusa, tudo se resolve.</p>
-</center>
-</div>
+                            <tr>
+                                <td class="normal">Valor: </td>
+                                <td class="normal">
+                                    <input type="text" size="15" id="valor" name="valor">
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <br>
+                    <input id="criar" type="submit" value="Cadastrar">
+                    </div>
+                    </div>
+                </form>
+                </center>
+                <div id='div3' name='div3'>
+                    <center>
+                        <h3>Oficina G</h3>
+                        <p>A Oficina da Gambiarra, onde nada se perde, nada se recusa, tudo se resolve.</p>
+                    </center>
+                </div>
 
 
-</body>
-</html>
+                </body>
+                </html>
