--- a/src/main/resources/templates/servicocadastro.html
+++ b/src/main/resources/templates/servicocadastro.html
@@ -134,7 +134,6 @@
                         </tr>
                         <div id="qpeca">
                             <tr>
-                                <td class="normal">Pe&ccedil;a: </td>
                                 <td class="normal">
                                     <select id="peca" name="peca">
                                         {{#pecas}}
@@ -152,7 +151,13 @@
                             </tr>
                         </tbody>
                     </table>
-
+                    
+                    <div>
+                        <table>
+                            
+                        </table>
+                        
+                    </div>
                     <br><br>
                     <input id="criar" type="submit" value="Cadastrar">
                     </div>
