--- a/src/main/resources/templates/clientefisicoupdate.html
+++ b/src/main/resources/templates/clientefisicoupdate.html
@@ -105,6 +105,7 @@
                         </tbody>
                     </table>
                     <br>
+                    <input type="hidden" name="tipo" value="f">
                     <input id="criar" type="submit" value="Alterar">
                     </div>
                     </div>
