--- a/src/main/resources/templates/clientejuridicoupdate.html
+++ b/src/main/resources/templates/clientejuridicoupdate.html
@@ -106,6 +106,7 @@
                         </tbody>
                     </table>
                     <br>
+                    <input type="hidden" name="tipo" value="j">
                     <input id="criar" type="submit" value="Alterar">
                     </div>
                     </div>
