--- a/src/main/resources/templates/servico_peca.html
+++ b/src/main/resources/templates/servico_peca.html
@@ -36,7 +36,7 @@
                 <tbody>
                     {{#servico_pecas}}
                     <tr>
-                        <td>{{nome}}</td>
+                        <td>{{peca.nome}}</td>
                         <td>{{quantidade}}</td>
                         <td>{{valor}}</td>
                     </tr>
