--- a/src/main/resources/templates/clientefisicocadastro.html
+++ b/src/main/resources/templates/clientefisicocadastro.html
@@ -103,6 +103,7 @@
                         </tbody>
                     </table>
                     <br>
+                    <input type="hidden" name="tipo" value="f">
                     <input id="criar" type="submit" value="Cadastrar">
                     </div>
                     </div>
