--- a/src/main/resources/templates/funcionario.html
+++ b/src/main/resources/templates/funcionario.html
@@ -33,7 +33,7 @@
                     <tbody>
                     <tr>
                         <td><input type="text" id="nome" name="nome"></td>
-                        <td><button type="button" onclick="funcionario()">Pesquisar</button></td>
+                        <td><button type="button" onclick="ajaxFuncionario()">Pesquisar</button></td>
                     </tr>
                     </tbody>
                 </table>
