--- a/src/main/resources/templates/funcionariocadastro.html
+++ b/src/main/resources/templates/funcionariocadastro.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="projetao.css" type="text/css" rel="stylesheet">
+        <script src="/projetao.js" type="text/javascript"></script>
     </head>
 
     <body>
